<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_PeersList" Id="{cb7d8015-fea6-4975-962a-104a3fdd4ae4}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE E_PeersList :
(
	ePEER_NO_PEER := 1,
	ePEER_CONVEYOR_1,
	ePEER_CONVEYOR_2,
	ePEER_CONVEYOR_3,
	ePEER_CONVEYOR_4
)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>