<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="MAIN" Id="{7a0b3f69-4d4b-40e6-a7dc-bf925c7fe6d4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fbMediator : FB_Mediator;
	aMediatorInitReturnCodes : ARRAY[1..GVL_Constants.nACTUAL_NUM_PEERS] OF E_MediatorReturnCode;
	
	aConveyorPeers : ARRAY[1..GVL_Constants.nACTUAL_NUM_PEERS] OF FB_Conveyor;
	
	rConveyor1 : REFERENCE TO FB_Conveyor;
	rConveyor2 : REFERENCE TO FB_Conveyor;
	rConveyor3 : REFERENCE TO FB_Conveyor;
	rConveyor4 : REFERENCE TO FB_Conveyor;
	
	fbConveyorPeerSequence : FB_ConveyorPeerSequence;
	{attribute 'OPC.UA.DA' := '1'}
	bInit : BOOL;
	nMainI : UINT;
	
	(*
	//fbCutPeer : FB_Peer(E_PeersList.ePEER_SCHNEIDEN);
	fbDebugPeer1 : FB_Peer(E_PeersList.ePEER_DEBUG_1);
	fbDebugPeer2 : FB_Peer(E_PeersList.ePEER_DEBUG_2);
	
	eMediatorReturnCode : E_MediatorReturnCode;
	
	bPeer1SendMessage : BOOL;
	bPeer2SendMessage : BOOL;
 	*)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
IF eMediatorReturnCode = NULL THEN
	eMediatorReturnCode := fbMediator.M_AddPeer(fbDebugPeer1);
	fbMediator.M_AddPeer(fbDebugPeer2);
END_IF 

fbMediator();

IF bPeer1SendMessage THEN
	
	fbDebugPeer1.M_SendMessage(
		in_stMessage := Message(eDEBUG_MESSAGE,ePEER_DEBUG_2)	
	);
	
	bPeer1SendMessage := FALSE;
	
ELSIF bPeer2SendMessage THEN
	
	fbDebugPeer2.M_SendMessage(
		in_stMessage := Message(eDEBUG_MESSAGE,ePEER_DEBUG_1)		
	);
	
	bPeer2SendMessage := FALSE;
	
END_IF
*)

IF NOT bInit THEN
	
	bInit := TRUE;
	
	rConveyor1 REF= aConveyorPeers[1];
	rConveyor2 REF= aConveyorPeers[2];
	rConveyor3 REF= aConveyorPeers[3];
	rConveyor4 REF= aConveyorPeers[4];
	
	rConveyor1.eSetPeerId := E_PeersList.ePEER_CONVEYOR_1;
	rConveyor2.eSetPeerId := E_PeersList.ePEER_CONVEYOR_2;
	rConveyor3.eSetPeerId := E_PeersList.ePEER_CONVEYOR_3; 
	rConveyor4.eSetPeerId := E_PeersList.ePEER_CONVEYOR_4; 
	
	FOR nMainI := 1 TO GVL_Constants.nACTUAL_NUM_PEERS DO 
		aMediatorInitReturnCodes[nMainI] := fbMediator.M_AddPeer(aConveyorPeers[nMainI]);
		aConveyorPeers[nMainI].M_RegisterSequence(fbConveyorPeerSequence);
		aConveyorPeers[nMainI].in_bStart := TRUE;
	END_FOR	
	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="119" Count="0" />
      <LineId Id="82" Count="22" />
      <LineId Id="52" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="144" Count="2" />
      <LineId Id="143" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="3" />
      <LineId Id="126" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="157" Count="1" />
      <LineId Id="130" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="127" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>